[gd_scene load_steps=15 format=2]

[ext_resource path="res://choose_an_upgrade.png" type="Texture" id=1]
[ext_resource path="res://upgrade_frame.png" type="Texture" id=2]
[ext_resource path="res://UpgradeMenu.gd" type="Script" id=3]
[ext_resource path="res://tougher_plants_icon.png" type="Texture" id=4]
[ext_resource path="res://seed_regen_icon.png" type="Texture" id=5]
[ext_resource path="res://dash_icon.png" type="Texture" id=6]
[ext_resource path="res://multishot_icon.png" type="Texture" id=7]
[ext_resource path="res://bomb_icon.png" type="Texture" id=8]
[ext_resource path="res://extra_seed_icon.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="UpgradeMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )
multishot_icon = ExtResource( 7 )
bomb_icon = ExtResource( 8 )
dash_icon = ExtResource( 6 )
extra_seed_icon = ExtResource( 9 )
seed_regen_icon = ExtResource( 5 )
tougher_plants_icon = ExtResource( 4 )

[node name="ChooseAnUpgrade" type="Sprite" parent="."]
position = Vector2( 322, 110 )
texture = ExtResource( 1 )

[node name="Option1" type="Button" parent="."]
margin_left = 208.0
margin_top = 135.0
margin_right = 272.0
margin_bottom = 199.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 2 )

[node name="Option2" type="Button" parent="."]
margin_left = 288.0
margin_top = 135.0
margin_right = 352.0
margin_bottom = 199.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 2 )

[node name="Option3" type="Button" parent="."]
margin_left = 370.0
margin_top = 135.0
margin_right = 434.0
margin_bottom = 199.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 2 )

[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_Option3_pressed"]
